# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
src/: main.cc
src/chip8/: chip8.cc  chip8.hh
